Aniadidos comentarios a los codigos fuentes

--- a/tabla.html
+++ b/tabla.html
@@ -1,5 +1,6 @@
 <!doctype html>
-
+    
+<!-- Tabla de temperaturas -->
 <html lang="span">
     <head>
         <title>Conversor de Temperaturas</title>
@@ -12,6 +13,7 @@
         <h1>Tabla mas de temperaturas más frecuentes</h1>
         <img id=esquema src="resources/tabla.png" >
     </body>
+    <!-- Pie de Pagina -->
     <footer class="container">
         <address>
             Desarrollado por: Sawan J. Kapai Harpalani <a href="alu0100694765@ull.edu.es">alu0100694765@ull.edu.es</a><br>
