--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 
+<!-- Pagina principal del proyecto -->
 <html lang="span">
     <head>
         <title>Conversor de Temperaturas</title>
@@ -10,6 +11,7 @@
         <img id=logo src="resources/banner.png" >
     </header>
     <body>
+        <!-- conversor de temperatura-->
         <form name=conversor>
             <p><b>Introduzca la temperatura que desea convertir </b>
                 <input type=text onchange="calcular();" id=datos placeholder="nC o nF">
@@ -18,6 +20,7 @@
             </p>
             <p>Si desea ver una tabla de las temperaturas mas frecuentes pulse <a href="tabla.html">aquí</a></p>
         </form>
+        <!-- Explicacion sobre la metodologia de conversion -->
         <form name=explicacion_breve>
             <p>
                 <h1 id=ex>Grados Centígrados</h1>
@@ -36,6 +39,7 @@
             </p>
         </form>
     </body>
+    <!-- Pie de pagina -->
     <footer class="container">
         <address>
             Desarrollado por: Sawan J. Kapai Harpalani <a href="alu0100694765@ull.edu.es">alu0100694765@ull.edu.es</a><br>
