--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                     Su resultado convertido es : <input type=text id=resul>
             </p>
             <p>Si desea ver una tabla de las temperaturas mas frecuentes pulse <a href="tabla.html">aquí</a></p>
+            <p>Si desea ver una tabla de las pruebas unitarias realizads con mocha pulse <a href="test/index.html">aquí</a></p>
         </form>
         <!-- Explicacion sobre la metodologia de conversion -->
         <form name=explicacion_breve>
